crates/plotnik-lib/tests/05-typegen/naming/error_definition_named_node.txt
Node = (program (statement) @x)
------------------ DIAGNOSTICS -------------------
error: type name `Node` is already used for a different type
 --> query.ptk:1:1
  |
1 | Node = (program (statement) @x)
  | ^^^^
  |
help: `Node` is the builtin node type name
